--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,22 @@ spring.application.name=Human Resource Management System
 
 server.port=8080
 
+logging.level.root=INFO
+logging.level.com.example.hrms=DEBUG
+logging.file.name=logs/hrms.log
+
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/hrms_db
 spring.datasource.username=hrms_user
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# JWT Configuration
-jwt.secret=${JWT_SECRET}
+## JWT Configuration
+#jwt.secret=${JWT_SECRET}
 jwt.expiration=900000
